WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
125363
AX: WebKit ignores @alt on IMG elements with role="text"
https://bugs.webkit.org/show_bug.cgi?id=125363
Summary
AX: WebKit ignores @alt on IMG elements with role="text"
James Craig
Reported
2013-12-06 13:34:07 PST
AX: WebKit ignores @alt on IMG elements with role="text" This does not output anything: <img role="text" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" width="100" height="100" alt="foo" /> But it does if you add @aria-label: <img role="text" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" width="100" height="100" alt="foo" aria-label="foo" />
Attachments
patch
(6.54 KB, patch)
2013-12-08 11:45 PST
,
chris fleizach
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
James Craig
Comment 1
2013-12-06 14:15:08 PST
<
rdar://problem/15607736
>
chris fleizach
Comment 2
2013-12-08 11:45:12 PST
Created
attachment 218703
[details]
patch
WebKit Commit Bot
Comment 3
2013-12-09 06:14:28 PST
Comment on
attachment 218703
[details]
patch Clearing flags on attachment: 218703 Committed
r160311
: <
http://trac.webkit.org/changeset/160311
>
WebKit Commit Bot
Comment 4
2013-12-09 06:14:31 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug